tests addded
